Re-added dep for `serde_json`
- We really just want their `Number` type, but really we should be using
  a seperate crate/our own type to replace this. Will deal with this
  down the road.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ rlp-derive = "0.1.0"
 rust_decimal = "1.32.0"
 serde = "1.0.166"
 serde_with = {version = "3.0.0", features = ["base64"] }
+
+# TODO: Replace!
+serde_json = "1.0.106"
 thiserror = "1.0.41"
 
 [patch.crates-io]
