--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "plonky_edge_block_trace_parser"
-author = "Polygon Zero <bgluth@polygon.technology>"
+authors = ["Polygon Zero <bgluth@polygon.technology>"]
 version = "0.1.0"
 edition = "2021"
 
