--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install protoc
+        run: sudo apt-get install -y protobuf-compiler
+
       - name: Install toolchain
         uses: actions-rs/toolchain@v1
         with:
