--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -9,17 +9,17 @@ edition = "2021"
 [dependencies]
 ethereum-types = "0.14.1"
 eth_trie_utils = "0.6.0"
-hex = "0.4.3"
+hex = { workspace = true }
 keccak-hash = "0.10.0"
-log = "0.4.19"
+log = { workspace = true }
 plonky_block_proof_gen = { git = "https://github.com/mir-protocol/plonky-block-proof-gen.git", rev = "82cfa46971f7884de66cce22c3836065f4db447e" }
-plonky2_evm = { git = "https://github.com/mir-protocol/plonky2.git", rev = "0b5ac312c0f9efdcc6d85c10256d2843d42215a2" }
-rlp = "0.5.2"
+plonky2_evm = { workspace = true }
+rlp = { workspace = true }
 rlp-derive = "0.1.0"
 rust_decimal = "1.32.0"
 serde = "1.0.166"
 serde_with = { version = "3.0.0", features = ["base64"] }
 
 # TODO: Replace!
-serde_json = "1.0.106"
+serde_json = { workspace = true }
 thiserror = "1.0.41"
